# cryptoquery

./: Makefile  Makefile.in  README.md  TAGS  configure  configure.ac
example/: test1.db
examples/: benchmark_pairing.c  benchmark_product_pairing.c  schema.sql  test1.conf
examples/datasets/shuttle/: shuttle.data  shuttle.db
scripts/: analyses.py  convert_data.py  extract-amm.awk  extract.awk  extract_from_all.sh  generate_data.py  generate_graph_data.py  get_data.sh  run_test.sh  run_test_amortized.sh
scripts/gnuplot/: decrypt.plt  encryption.plt  keygen.plt  setup.plt
src/: Makefile  Makefile.am  Makefile.in  TAGS  common.h  config.h  config.h.in  configuration.c  configuration.h  cryptoquery.c  cryptoquery.h  database.c  database.h  encryption.c  encryption.h  hve1.h  query.c  query.h  testing.c  testingA.c
src/database/: sqlite.h
src/schemas/: aes.c  aes.h  hve.c  hve.h  hve_ip.c  hve_ip.h  hve_ip_ammortized.h  hve_ip_amortized.c  hve_ip_amortized.h  hve_ip_amortized2.c  hve_ip_serialization.c  ksw_predicate.c  ksw_predicate.h  lostw.c  lostw.c-old  lostw.h  utils.c  utils.h
src/test/: benchmark_hve.c  generate_hve.c  test_encrypt.c  test_serialization_hve.c  testsize.c  testsize2.c
